First stage development

--- a/index.html
+++ b/index.html
@@ -4,10 +4,69 @@
 
 <head>
 	<title>"hello"</title>
+	<style>
+	html{
+	background: url("wood.jpg") no-repeat center center fixed; 
+	webkit-background-size: cover; 
+	moz-background-size: cover; 
+	o-background-size: cover; 
+	background-size: cover;
+	}
+
+	.Top{
+		background-color: rgba(150,0,0,0.4);
+		height: 15%;
+		font-size: 100;
+		color: yellow;
+		text-align: center;
+		font-family: helvetica;
+	}
+
+	.Intro{
+		color: yellow;
+		float: left;
+		margin-top: 7.5%;
+		margin-left: 5%;
+		font-size: 40;
+		font-family: sans-serif;
+	}
+
+	.Pic{
+		float: left;
+		margin-left: 12%;
+		margin-top: 7.5%;
+	}
+
+	.SideNav{
+		height: 100%;
+		width: 15%;
+		background-color: rgba(0,0,0,0.2);
+		float: left;
+	}
+
+	.SideNav a{
+		display: block;
+		font-size: 30;
+		margin-top: 30%;
+	}
+	</style>
 </head>	
 
 <body>
-	<h1>"welcome"</h1>
+	<div class="Top">
+		ObSERVER. ThINKER. PoET.
+	</div>	
+	<div class="SideNav">
+		<a href="" style margin-top: 15%> A </a>
+		<a href=""> B </a>
+		<a href=""> C </a>
+	</div>	
+	<div class="Pic">
+		<img src="DisplayPic.jpg" width="275" height="400" >
+	</div>
+	<div class="Intro">
+		<h2>Hi!</h2>
+	</div>	
 </body>	
 
 </html>
