--- a/index.html
+++ b/index.html
@@ -15,57 +15,80 @@
 
 	.Top{
 		background-color: rgba(150,0,0,0.4);
-		height: 15%;
-		font-size: 100;
-		color: yellow;
+		height: 10%;
+		font-size: 90;
+		color: black;
 		text-align: center;
 		font-family: helvetica;
 	}
 
-	.Intro{
+	.Heading{
+		position:absolute;
 		color: yellow;
 		float: left;
 		margin-top: 7.5%;
-		margin-left: 5%;
+		margin-left: 35%;
 		font-size: 40;
 		font-family: sans-serif;
 	}
 
+	.Intro{
+		position: absolute;
+		margin-top: 45%;
+		margin-left: 30%;
+		margin-right: 15%;
+		font-size: 50;
+		color: white;
+		font-family: garamond;
+	}
+
 	.Pic{
+		position: absolute;
 		float: left;
 		margin-left: 12%;
-		margin-top: 7.5%;
+		margin-top: 5%;
+		z-index: 1;
+
 	}
 
 	.SideNav{
+		position: absolute;
 		height: 100%;
 		width: 15%;
+		margin-top: 40%;
 		background-color: rgba(0,0,0,0.2);
 		float: left;
 	}
 
 	.SideNav a{
 		display: block;
-		font-size: 30;
-		margin-top: 30%;
+		font-size: 40;
+		margin-top: 50%;
+		margin-left: 12%;
 	}
 	</style>
 </head>	
 
 <body>
-	<div class="Top">
+	<!--<div class="Top">
 		ObSERVER. ThINKER. PoET.
-	</div>	
+	</div>	-->
 	<div class="SideNav">
-		<a href="" style margin-top: 15%> A </a>
-		<a href=""> B </a>
-		<a href=""> C </a>
+		<a href=""> About </a>
+		<a href=""> Achievements </a>
+		<a href=""> Projects </a>
+		<a href=""> Contact </a>
 	</div>	
 	<div class="Pic">
-		<img src="DisplayPic.jpg" width="275" height="400" >
+		<img src="DisplayPic.gif" width="400" height="425" >
 	</div>
+	
+	<div class="Heading">
+		<h1>SHUBHANGI RAJ (Shubhi)</br></h1>
+		ObSERVER. ThINKER. PoET.
+	</div>	
 	<div class="Intro">
-		<h2>Hi!</h2>
+		An aspiring Software Engineer, I am extremely motivated, inquisitive and constantly looking to develop my skills and grow professionally. Being an effective communicator and leader, I have held positions in the student government body on several occassions.
 	</div>	
 </body>	
 
