--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	}
 
 	.Top{
-		background-color: rgba(150,0,0,0.4);
-		height: 10%;
+		background-color: black;
+		height: 3%;
 		font-size: 90;
 		color: black;
 		text-align: center;
@@ -70,9 +70,8 @@
 </head>	
 
 <body>
-	<!--<div class="Top">
-		ObSERVER. ThINKER. PoET.
-	</div>	-->
+	<div class="Top">
+	</div>
 	<div class="SideNav">
 		<a href=""> About </a>
 		<a href=""> Achievements </a>
