Minor errors fixed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	.Top{
 		background-color: black;
 		height: 3%;
-		font-size: 90;
+		font-size: 80;
 		color: black;
 		text-align: center;
 		font-family: helvetica;
@@ -28,7 +28,7 @@
 		float: left;
 		margin-top: 7.5%;
 		margin-left: 35%;
-		font-size: 40;
+		font-size: 30;
 		font-family: sans-serif;
 	}
 
@@ -37,7 +37,7 @@
 		margin-top: 45%;
 		margin-left: 30%;
 		margin-right: 15%;
-		font-size: 50;
+		font-size: 35;
 		color: white;
 		font-family: garamond;
 	}
@@ -62,7 +62,7 @@
 
 	.SideNav a{
 		display: block;
-		font-size: 40;
+		font-size: 30;
 		margin-top: 50%;
 		margin-left: 12%;
 	}
@@ -79,7 +79,7 @@
 		<a href=""> Contact </a>
 	</div>	
 	<div class="Pic">
-		<img src="DisplayPic.gif" width="400" height="425" >
+		<img src="DisplayPic.gif" width="350" height="375" >
 	</div>
 	
 	<div class="Heading">
@@ -87,7 +87,7 @@
 		ObSERVER. ThINKER. PoET.
 	</div>	
 	<div class="Intro">
-		An aspiring Software Engineer, I am extremely motivated, inquisitive and constantly looking to develop my skills and grow professionally. Being an effective communicator and leader, I have held positions in the student government body on several occassions.
+		An aspiring Software Engineer at University of Waterloo, I am extremely motivated, inquisitive and constantly looking to develop my skills and grow professionally. Being an effective communicator and leader, I have held positions in the student government body on several occassions.
 	</div>	
 </body>	
 
