--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		ObSERVER. ThINKER. PoET.
 	</div>	
 	<div class="Intro">
-		An aspiring Software Engineer at University of Waterloo, I am extremely motivated, inquisitive and constantly looking to develop my skills and grow professionally. Being an effective communicator and leader, I have held positions in the student government body on several occassions.
+		An aspiring Software Engineer at University of Waterloo, I am extremely motivated, inquisitive and constantly looking to develop my skills and grow professionally. Being an effective communicator and leader, I have held several positions in the student government body.
 	</div>	
 </body>	
 
