--- a/index.html
+++ b/index.html
@@ -1,95 +1,20 @@
-
 <doctype! html>
-<html>
 
 <head>
-	<title>"hello"</title>
-	<style>
-	html{
-	background: url("wood.jpg") no-repeat center center fixed; 
-	webkit-background-size: cover; 
-	moz-background-size: cover; 
-	o-background-size: cover; 
-	background-size: cover;
-	}
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-	.Top{
-		background-color: black;
-		height: 3%;
-		font-size: 80;
-		color: black;
-		text-align: center;
-		font-family: helvetica;
-	}
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-	.Heading{
-		position:absolute;
-		color: yellow;
-		float: left;
-		margin-top: 7.5%;
-		margin-left: 35%;
-		font-size: 30;
-		font-family: sans-serif;
-	}
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-	.Intro{
-		position: absolute;
-		margin-top: 45%;
-		margin-left: 30%;
-		margin-right: 15%;
-		font-size: 35;
-		color: white;
-		font-family: garamond;
-	}
+	<title>Shubhi-Portfolio</title>	
 
-	.Pic{
-		position: absolute;
-		float: left;
-		margin-left: 10%;
-		margin-top: 5%;
-		z-index: 1;
 
-	}
-
-	.SideNav{
-		position: absolute;
-		height: 100%;
-		width: 15%;
-		margin-top: 40%;
-		background-color: rgba(0,0,0,0.2);
-		float: left;
-	}
-
-	.SideNav a{
-		display: block;
-		font-size: 30;
-		margin-top: 50%;
-		margin-left: 12%;
-		color: red;
-	}
-	</style>
 </head>	
 
 <body>
-	<div class="Top">
-	</div>
-	<div class="SideNav">
-		<a href=""> About </a>
-		<a href=""> Achievements </a>
-		<a href=""> Projects </a>
-		<a href=""> Contact </a>
-	</div>	
-	<div class="Pic">
-		<img src="DisplayPic.gif" width="350" height="375" >
-	</div>
 	
-	<div class="Heading">
-		<h1>SHUBHANGI RAJ (Shubhi)</br></h1>
-		ObSERVER. ThINKER. PoET.
-	</div>	
-	<div class="Intro">
-		An aspiring Software Engineer at University of Waterloo, I am extremely motivated, inquisitive and constantly looking to develop my skills and grow professionally. Being an effective communicator and leader, I have held several positions in the student government body.
-	</div>	
 </body>	
-
-</html>
