--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <doctype! html>
-
+<html>
 <head>
+	<link rel="stylesheet" href="style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -9,12 +11,33 @@
 
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
 	<title>Shubhi-Portfolio</title>	
-
-
 </head>	
 
 <body>
-	
+	<div class="pingBG">
+	  	<nav class="navbar navbar-inverse navbar-fixed-top">
+	  	<div class="container-fluid">
+	    <div class="navbar-header">
+	    </div>
+	    <ul class="nav navbar-nav navbar-right">
+	      <li class="active btn-lg"><a href="#">Home</a></li>
+	      <li class="btn-lg"><a href="#" >Experience</a></li>
+	      <li class="btn-lg"><a href="#" >Portfolio</a></li>
+	      <li class="btn-lg"><a href="#" >Achievements</a></li>
+	      <li class="btn-lg"><a href="#" >Contact</a></li>
+	    </ul>
+	  	</div>
+		</nav>
+		<div class="margin-top container">
+			<h1 style="font-size:100px; text-align:center; color:white;"> Shubhangi Raj (Shubhi)<h1>
+			<h2 style="font-size:35px; text-align:center; color:white;">Coder <strong>|</strong> ML Developer <strong>|</strong> LinkedIn Enthusiast<br> Blogger <strong>|</strong> Poet <strong>|</strong> Leader</h2>	
+		</div>		
+	</div>
+
+	<div class="container-fluid margin-top">
+		<div class="col-sm-3">
+			<img src="DisplayPic.gif" class="img-rounded" alt="Shubhangi Raj(SHUBHI)">
+		</div>	
+	</div>
 </body>	
