--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>	
 
 <body>
-	<div class="pingBG">
+	<div class="container pingBG">
 	  	<nav class="navbar navbar-inverse navbar-fixed-top">
 	  	<div class="container-fluid">
 	    <div class="navbar-header">
@@ -35,7 +35,7 @@
 		</div>		
 	</div>
 
-	<div class="container-fluid margin-top">
+	<div class="container margin-top">
 		<div class="col-sm-3">
 			<img src="DisplayPic.gif" class="img-rounded" alt="Shubhangi Raj(SHUBHI)">
 		</div>	
