--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 	<div class="container pingBG">
-	  	<nav class="navbar navbar-fixed-top">
+	  	<nav class="navbar navbar-inverse navbar-fixed-top">
 	  	<div class="container-fluid">
 	    <div class="navbar-header">
 	    </div>
