--- a/tempFin.html
+++ b/tempFin.html
@@ -8,6 +8,8 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script>UPLOADCARE_PUBLIC_KEY = "demopublickey";</script>
+  <script src="https://ucarecdn.com/libs/widget/2.10.2/uploadcare.full.min.js" charset="utf-8"></script>
 </head>
 <body>
 <form action="https://formspree.io/raj.shubhangi@ymail.com" method="post">
@@ -27,6 +29,7 @@
   </div>
   <div class="form-group">
     <label for="file">Coin Image:</label>
+    <input type="hidden" role="uploadcare-uploader" name="my_file" />
     <input class="form-control" type="file" id="file" name="file">
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
