--- a/tempFin.html
+++ b/tempFin.html
@@ -8,8 +8,12 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script>UPLOADCARE_PUBLIC_KEY = "demopublickey";</script>
-  <script src="https://ucarecdn.com/libs/widget/2.10.2/uploadcare.full.min.js" charset="utf-8"></script>
+  <script>
+  UPLOADCARE_LOCALE = "en";
+  UPLOADCARE_TABS = "file url facebook gdrive gphotos dropbox instagram evernote flickr skydrive";
+  UPLOADCARE_PUBLIC_KEY = "669ce2cee3a311ebced3";
+</script>
+<script charset="utf-8" src="//ucarecdn.com/libs/widget/3.3.0/uploadcare.full.min.js"></script>
 </head>
 <body>
 <form action="https://formspree.io/raj.shubhangi@ymail.com" method="post">
@@ -29,7 +33,10 @@
   </div>
   <div class="form-group">
     <label for="file">Coin Image:</label>
-    <input type="hidden" role="uploadcare-uploader" name="my_file" />
+    <input type="hidden" role="uploadcare-uploader" name="file"
+       data-crop="disabled"
+       data-preview-step="true"
+       data-images-only="true" />
     <input class="form-control" type="file" id="file" name="file">
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
