--- a/tempFin.html
+++ b/tempFin.html
@@ -38,7 +38,7 @@
        data-preview-step="true"
        data-images-only="true" />
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-lg btn-info">Submit</button>
 </div>
 </form>
 </body>
